# strawberry-subscriptions-ep2023

./: .pre-commit-config.yaml  main.py  pyproject.toml  requirements.txt
app/api/: context.py  schema.py
app/polls/: get_poll.edgeql  get_poll_async_edgeql.py  insert_poll.edgeql  insert_poll_async_edgeql.py  vote.edgeql  vote_async_edgeql.py
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql
frontend/: codegen.ts  package.json  pnpm-lock.yaml
frontend/app/: page.tsx
frontend/app/[id]/: apollo-wrapper.tsx  page.tsx  poll-cc.tsx
frontend/components/: types.generated.ts
frontend/components/poll/: documents.generated.ts  documents.graphql  index.tsx
